--- a/src/index.scss
+++ b/src/index.scss
@@ -40,7 +40,7 @@ header {
   border-radius: 40px;
   margin-right: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-
+  margin-bottom: 30px;
   &:hover {
     box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
     transform: translateY(-5px);
@@ -62,6 +62,9 @@ header {
   h5 {
     font-weight: 400;
     font-size: 14px;
+  }
+  .plus{
+    cursor: pointer;
   }
 }
 .button {
@@ -168,7 +171,7 @@ header {
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
-  transition: background 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
 
   &:hover {
     background: lighten(#9dd558, 5%);
