--- a/src/index.scss
+++ b/src/index.scss
@@ -125,6 +125,17 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  visibility: hidden;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+}
+.overlayvisible{
+  visibility: visible;
+  opacity: 1;
+  .drawer{
+    transform: translateX(0);
+  }
 }
 
 .drawer {
@@ -137,6 +148,8 @@ header {
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
 
   .items {
     flex: 1;
